fix: fix client and server
