# src/Samples.AspNetCore.v6.Facade/Controllers/WeatherForecast.cs
@@ -1,7 +1,0 @@
-namespace Samples.AspNetCore.v6.Facade.Controllers
-{
-	public partial class WeatherForecast
-    {
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
-    }
-}
